--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BluetoothApp",
+  "name": "bluetooth-app",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -10,11 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
-    "expo-device": "^5.2.1",
     "react": "18.2.0",
     "react-native": "0.71.4",
-    "react-native-base64": "^0.2.1",
-    "react-native-ble-plx": "^2.0.3"
+    "react-native-ble-plx": "^2.0.3",
+    "react-native-device-info": "^10.4.0",
+    "react-native-permissions": "^3.8.0",
+    "react-native-quick-base64": "^2.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -35,6 +36,14 @@
     "typescript": "4.8.4"
   },
   "jest": {
-    "preset": "react-native"
+    "preset": "react-native",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "jsx",
+      "json",
+      "node"
+    ]
   }
 }
